Add latest functionality (#4)
* create login, register and protected routes

* create register and login routing on server side

* create models for database

* Feature/create register controller (#2)

* create register

* finish login and register

* create auth and yaml swagger doc

* remove lint:fix

* rever lint:fix

* add eslint ignore file

* create swagger for routes

* remove spec.json

* refactor models

* refactor models

* create admin and support roles and middlewares

* create admin model

* create user regsiter and login

* create hasRole middleware

* create change password functionality for logged in users

* update swagger

* refactor code and add last endpoints from swagger file
