# server/src/utils/sendConfirmationEmail.js
@@ -13,7 +13,7 @@ const transport = nodemailer.createTransport({
   },
 });
 
-const sendConfirmationEmail = async (name, email, confirmationCode) => {
+export const sendConfirmationEmail = async (name, email, confirmationCode) => {
   try {
     await transport.sendMail({
       from: user,
@@ -35,4 +35,69 @@ const sendConfirmationEmail = async (name, email, confirmationCode) => {
   }
 };
 
-export default sendConfirmationEmail;
+export const sendPasswordResetEmail = async (name, email, confirmationCode) => {
+  try {
+    await transport.sendMail({
+      from: user,
+      to: email,
+      subject: "ASquare - Password Reset Request",
+      html: `<div>
+        <div>Hi ${name}! Somebody requested a password reset</div>
+        <div>For resetting your password please <a href="http://localhost:3000/api/auth/reset/${confirmationCode}>Click here</a></div>
+        </div>`,
+    });
+  } catch (error) {
+    throw new ProblemError(
+      500,
+      "email-error",
+      "Error sending email",
+      "Server was not able to send confirmation email. Please try again later."
+    );
+  }
+};
+
+export const sendOkPasswordResetEmail = async (name, email) => {
+  try {
+    await transport.sendMail({
+      from: user,
+      to: email,
+      subject: "ASquare - Password Reset Successfully",
+      html: `<div>
+        <div>Hi ${name}! Your password have been reset!</div>
+        <div>You can Log In now with your new password</div>
+        </div>`,
+    });
+  } catch (error) {
+    throw new ProblemError(
+      500,
+      "email-error",
+      "Error sending email",
+      "Server was not able to send confirmation email. Please try again later."
+    );
+  }
+};
+
+export const sendPasswordResetEmailForAdmin = async (
+  name,
+  email,
+  confirmationCode
+) => {
+  try {
+    await transport.sendMail({
+      from: user,
+      to: email,
+      subject: "ASquare - Password Reset Request",
+      html: `<div>
+        <div>Hi ${name}! Somebody requested a password reset</div>
+        <div>For resetting your password please <a href="http://localhost:3000/api/auth/admin/password/reset/${confirmationCode}>Click here</a></div>
+        </div>`,
+    });
+  } catch (error) {
+    throw new ProblemError(
+      500,
+      "email-error",
+      "Error sending email",
+      "Server was not able to send confirmation email. Please try again later."
+    );
+  }
+};
